Omit the integer value for grid-lines when it's the default value. https://bugs.webkit.org/show_bug.cgi?id=245025

Reviewed by Tim Nguyen.

As per the shortest possible serialization principle, we don't need to print the '1' default value.

* LayoutTests/fast/css-grid-layout/grid-item-area-get-set-expected.txt:
* LayoutTests/fast/css-grid-layout/grid-item-area-get-set.html:
* LayoutTests/fast/css-grid-layout/grid-item-column-row-get-set-expected.txt:
* LayoutTests/fast/css-grid-layout/grid-item-column-row-get-set.html:
* LayoutTests/fast/css-grid-layout/grid-item-end-after-get-set-expected.txt:
* LayoutTests/fast/css-grid-layout/grid-item-end-after-get-set.html:
* LayoutTests/fast/css-grid-layout/grid-item-start-before-get-set-expected.txt:
* LayoutTests/fast/css-grid-layout/grid-item-start-before-get-set.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/grid-layout-properties.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/parsing/grid-area-computed-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-grid/parsing/grid-area-computed.html:
* Source/WebCore/css/ComputedStyleExtractor.cpp:
(WebCore::valueForGridPosition):

Canonical link: https://commits.webkit.org/254821@main